test/compile_errors/err_operator_neg_no_impl.w
//! expect-check-fail: unary '-' requires a signed numeric operand or a type implementing 'neg'

type Plain { value: i32 }

fn main:
    let _ = -Plain { value: 1 }
